--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,10 @@
 body {
   margin: 0;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+ } 
+::-webkit-scrollbar {
+  display: none;
 }
 
 .home {
@@ -32,7 +37,7 @@ body {
 
 .space {
   color: white;
-  margin-left: 10%;
+  margin-left: 50px;
 }
 
 .menu {
@@ -46,4 +51,57 @@ body {
 
 .as {
   margin-right: 30px;
+}
+
+.banner {
+  width: 100vw;
+  height: 160px;
+  background-color: greenyellow;
+}
+
+.bookshelf{
+  width: 100vw;
+  height: auto;
+  /* height: 100vh; */
+  background-color: hotpink;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fonts {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 10pt;
+  margin-left: 15px;
+}
+
+.book {
+  width: 90px;
+  height: 120px;
+  background-color: blueviolet;
+}
+
+.top {
+  margin-top: 20px;
+}
+
+.footer {
+  width: 100vw;
+  height: 300px;
+  background-color: darkorange;
+}
+
+.notice {
+  width: 100vw;
+  height: 90px;
+  background-color: blue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notice-text {
+  width: 80%;
+  /* background-color: black; */
+  color: #707070;
 }
